Bug fixes
- Forex reducer restore
- Display all rates but hide scrollbar

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,76 +1,85 @@
 .form {
-	@apply mx-auto flex min-w-fit flex-col rounded-lg px-12 py-4;
-	border: 1px solid red;
-	border-top: 7px solid #101935;
-	transition: var(--transition);
+    @apply mx-auto flex min-w-fit flex-col rounded-lg px-12 py-4;
+    border: 1px solid red;
+    border-top: 7px solid #101935;
+    transition: var(--transition);
 }
 
 body {
-	@apply text-lg;
-	/* @apply lg:text-xl; */
+    @apply text-lg;
+    /* @apply lg:text-xl; */
 }
 button {
-	height: 51px;
-	font-size: 16px;
-	line-height: 110%;
-	padding: 1px 12px !important;
-	border-radius: 7px;
-	border: 0px;
-	font-weight: 700 !important;
-	cursor: pointer;
+    height: 51px;
+    font-size: 16px;
+    line-height: 110%;
+    padding: 1px 12px !important;
+    border-radius: 7px;
+    border: 0px;
+    font-weight: 700 !important;
+    cursor: pointer;
 }
 
 .header {
-	border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+    border-bottom: 1px solid rgba(0, 0, 0, 0.1);
 }
 
 .container {
-	/* max-width: 1200px; */
-	margin-left: auto;
-	margin-right: auto;
+    /* max-width: 1200px; */
+    margin-left: auto;
+    margin-right: auto;
+}
+/* Hide scrollbar for Chrome, Safari and Opera */
+.no-scrollbar::-webkit-scrollbar {
+    display: none;
 }
 
+/* Hide scrollbar for IE, Edge and Firefox */
+.no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+}
 .alert-danger {
-	background: #842029;
+    background: #842029;
 }
 .alert-success {
-	background: #03552f;
+    background: #03552f;
 }
 .alert {
-	@apply flex fixed md:w-1/4 min-w-fit z-[100] rounded border px-4 py-2 text-center opacity-95 drop-shadow-lg text-white;
-	top: 6%;
-	left: 50%;
-	transform: translateX(-50%);
-	animation: alertSlide 0.2s ease-out;
+    @apply flex fixed md:w-1/4 min-w-fit z-[100] rounded border px-4 py-2 text-center opacity-95 drop-shadow-lg text-white;
+    top: 6%;
+    left: 50%;
+    transform: translateX(-50%);
+    animation: alertSlide 0.2s ease-out;
 }
 
 .dash-list li {
-	@apply py-2 px-7 inline-flex gap-4;
+    @apply py-2 px-7 inline-flex gap-4;
 }
 .dash-list li:hover {
-	opacity: 0.7;
+    opacity: 0.7;
 }
 .dash-list li svg {
-	font-size: 1.5rem;
-	color: white;
+    font-size: 1.5rem;
+    color: white;
 }
 .active {
-	@apply bg-sky-500;
+    @apply bg-sky-500;
 }
 
 .ql-container {
-	min-height: 70vh;
-	height: 100%;
-	flex: 1;
-	display: flex;
-	flex-direction: column;
+    min-height: 70vh;
+    height: 100%;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
 }
 
 .ql-editor {
-	height: 100%;
-	flex: 1;
-	overflow-y: auto;
-	width: 100%;
+    height: 100%;
+    flex: 1;
+    overflow-y: auto;
+    width: 100%;
 }
 
 h1,
@@ -79,52 +88,52 @@ h3,
 h4,
 h5,
 h6 {
-	@apply font-primary leading-loose;
+    @apply font-primary leading-loose;
 }
 
 .newsListTable td {
-	@apply text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap;
+    @apply text-sm text-gray-900 font-light px-6 py-4 whitespace-nowrap;
 }
 
 .newsListTable th {
-	@apply text-sm font-medium text-gray-900 px-6 py-4 text-left;
+    @apply text-sm font-medium text-gray-900 px-6 py-4 text-left;
 }
 
 .news-content img {
-	@apply mb-5;
+    @apply mb-5;
 }
 
 .addNew {
-	@apply text-white flex gap-4 my-4 mx-auto w-2/4 text-2xl bg-green-700 py-2 px-4 rounded justify-center cursor-pointer;
+    @apply text-white flex gap-4 my-4 mx-auto w-2/4 text-2xl bg-green-700 py-2 px-4 rounded justify-center cursor-pointer;
 }
 .addNew svg {
-	@apply mt-[8px];
+    @apply mt-[8px];
 }
 
 .activeSideNav {
-	@apply text-darkblue font-bold text-xl pl-4 border-l-4 border-l-rose-700 transition-all duration-300;
+    @apply text-darkblue font-bold text-xl pl-4 border-l-4 border-l-rose-700 transition-all duration-300;
 }
 
 .social-share {
-	width: 2.4rem;
+    width: 2.4rem;
 }
 
 .poll-button {
-	background: linear-gradient(-45deg, #d31818e7, #d31818e7, #1d3557, #1d3557);
-	background-size: 900% 900%;
-	animation: jhilimili 0.8s infinite;
+    background: linear-gradient(-45deg, #d31818e7, #d31818e7, #1d3557, #1d3557);
+    background-size: 900% 900%;
+    animation: jhilimili 0.8s infinite;
 }
 
 @keyframes jhilimili {
-	0% {
-		background-position: 0% 50%;
-	}
-	50% {
-		background-position: 100% 50%;
-	}
-	100% {
-		background-position: 0% 50%;
-	}
+    0% {
+        background-position: 0% 50%;
+    }
+    50% {
+        background-position: 100% 50%;
+    }
+    100% {
+        background-position: 0% 50%;
+    }
 }
 
 /* .header-drop {
@@ -134,22 +143,22 @@ h6 {
 } */
 
 .header-drop {
-	/* @apply bg-gray-100; */
-	@apply bg-white;
-	opacity: 1;
-	top: -75px;
-	animation: bistarai 0.3s;
+    /* @apply bg-gray-100; */
+    @apply bg-white;
+    opacity: 1;
+    top: -75px;
+    animation: bistarai 0.3s;
 }
 .header-drop li {
-	@apply cursor-pointer my-1 hover:bg-blue rounded-sm py-2 duration-200 hover:text-white;
+    @apply cursor-pointer my-1 hover:bg-blue rounded-sm py-2 duration-200 hover:text-white;
 }
 @keyframes bistarai {
-	0% {
-		opacity: 0;
-		top: -100px;
-	}
-	100% {
-		opacity: 1;
-		top: -75px;
-	}
+    0% {
+        opacity: 0;
+        top: -100px;
+    }
+    100% {
+        opacity: 1;
+        top: -75px;
+    }
 }
